fix overflow

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -25,7 +25,7 @@ header.masthead {
     background-size: 100% auto;
     width: 100%;
 		height: 100%;
-		overflow: scroll;
+		/* overflow: scroll; */
   }
 
   header.masthead .overlay {
